<resources>

    <!-- Constants -->
    <string name="collection">users1</string>

    <!-- Extras -->
    <string name="loremIpsumDolores">Lorem Ipsum Dolores</string>
    <string name="exampleEmail">me@example.com</string>

    <!-- Main Activity -->
    <string name="app_name">Financier</string>
    <string name="app_icon_desc">app_icon</string>
    <string name="login_signup">Login</string>
    <string name="noAccount">Don\'t have an account yet?</string>
    <string name="signup_button">Sign Up</string>
    <string name="app_heading">Financier helps you to manage your money\n like never before</string>
    <string name="app_heading2">by Google</string>

    <!-- Registration Screen -->
    <string name="register_here">Knock knock.. who is it?</string>
    <string name="hint_signup_name">Enter your name here</string>
    <string name="hint_signup_email">Enter your email address here</string>
    <string name="hint_signup_pno">Type in your phone number</string>
    <string name="hint_signup_pass">Type in your password, 8 or more chars</string>
    <string name="password_directions">Password must contain 1 uppercase, 1 lowercase and 1 digit</string>
    <string name="hint_signup_confirm_pass">Retype your password</string>
    <string name="t_and_c">I agree to Financier\'s Terms and Conditions</string>
    <string name="register_button_text">Register</string>
    <string name="signupMonthlyIncome">Enter your monthly income</string>

    <!-- Login Screen -->
    <string name="login_here">Welcome back..</string>
    <string name="login_email">Registered Email</string>
    <string name="login_button">Login</string>
    <string name="login_password">Enter your password here</string>

    <!-- Navigation View -->
    <string name="dashboard">Dashboard</string>
    <string name="menu_expenditure">Add New Expenditure</string>
    <string name="visualize">Visualize Expenditures</string>
    <string name="menu_stats">View Stats</string>
    <string name="cloud_save">Cloud Save</string>
    <string name="cloud_download">Cloud Download</string>
    <string name="communicate">Communicate</string>
    <string name="dashboard_nav_drawer_open">Open Navigation Drawer</string>
    <string name="dashboard_nav_drawer_close">Close Navigation Drawer</string>

    <!-- Overlay Menu -->
    <string name="dot_menu_about">About</string>
    <string name="dot_menu_settings">Settings</string>
    <string name="logout_dot_menu">Logout</string>

    <!-- AlertDialog -->
    <string name="alertTitle">Logout?</string>
    <string name="alertMessage">Are you sure you want to logout?</string>
    <string name="positiveLogout">Yes</string>
    <string name="negativeLogout">No</string>
    <string name="hello_world">Hello World!</string>

    <!-- About Activity -->
    <string name="aboutCreator">\u00a9  Nikhil Anand, 2020</string>
    <string name="license">Open Source under MIT Licence</string>
    <string name="seeProjectSource">Open Github Repo</string>

    <!-- Expenditure View -->
    <string name="expenditureTitle">Expenditure Title</string>
    <string name="expenditureCategory">Expenditure Category</string>
    <string name="expenditureDate">Expenditure Date</string>
    <string name="expenditureAmount">Amount</string>

    <!-- New Expenditure Dialog -->
    <string name="ExpenditureDialogTitle">Add New Expenditure</string>
    <string name="ExpenditureDialogMessage">Tell us what you spent on</string>
    <string name="ExpenditureDialogName">What did you spend on?</string>
    <string name="ExpenditureDialogAmount">Enter the amount</string>
    <string name="ExpenditureDialogDate">Enter the date *</string>
    <string name="ExpenditureDialogTime">Enter the time (optional)</string>
    <string name="cancelAddNewExpenditure">Cancel</string>
    <string name="addNewExpenditure">Add</string>

    <!-- New Expenditure Activity -->
    <string name="ExpenditureActivityTitle">Add New Expenditure</string>
    <string name="ExpenditureActivityMessage">Tell us what you spent on</string>
    <string name="ExpenditureActivityName">What did you spend on?</string>
    <string name="ExpenditureActivityAmount">Enter the amount</string>
    <string name="ExpenditureActivityDate">Enter the date *</string>
    <string name="ExpenditureActivityTime">Enter the time (optional)</string>
    <string name="cancelAddNewExpenditureActivity">Cancel</string>
    <string name="addNewExpenditureActivity">Add</string>
    <string name="selectExpenditureCategory">Select Expenditure Category</string>

    <!-- Chip group -->
    <string name="foodChip">Food</string>
    <string name="householdChip">Household</string>
    <string name="socialChip">Social</string>
    <string name="workChip">Work</string>
    <string name="amenitiesChip">Amenities</string>
    <string name="recreationChip">Recreation</string>
    <string name="travelChip">Travel</string>
    <string name="educationChip">Education</string>

    <!-- Settings -->
    <string name="updateIncomeTitle">Update your monthly income</string>
    <string name="updateIncomeAmount">Your new income here</string>
    <string name="updateIncomeButton">Update</string>
    <string name="wipeDataCleanTitle">Wipe Data Clean</string>
    <string name="wipeDataCleanText">This would clear your data from the local database.\nYou will be <b><u><i>logged out</i></u></b> of the app.\nSure to Proceed?</string>
    <string name="wipeDataCleanButton">Wipe Data</string>
    <string name="emailVerified">Verify your email</string>
    <string name="verifyEmailButton">Verify</string>

    <!-- Dashboard text -->
    <string name="helloUser">Hello <b>John Doe</b></string>
    <string name="financierText">Financier will analyze your data and help you guide through</string>
    <string name="topStats"><u>Here are your top <b>stats</b></u></string>
    <string name="numberExpenditures">You have 9 expenditures so far</string>
    <string name="totalMonthly">You have spent this much from your total income of this much</string>
    <string name="monthlyPercentage">These expenditure account for 99 % of your total income</string>
    <string name="topCategory">You have spent most of your money on  Category, a total of this much</string>
    <string name="secondCategory">Next being, Category with a total expenditure of this much</string>
    <string name="statsTotal">Till date, you have spent a total of  this much i.e 99 % of your total earnings</string>
    <string name="remark">Not Bad</string>

    <!-- Progress Bar -->
    <string name="progressDialogLoading">Please wait while we load your profile</string>

    <!-- Single Expenditure View -->
    <string name="singleExpenditureName">Hey User,</string>
    <string name="singleExpenditureTitle">You spent this much on\nthis item</string>
    <string name="singleExpenditureCategory">This comes under the category of Category</string>
    <string name="singleExpenditureTotalIncome">of your total monthly income of this muchhhh</string>
    <string name="singleExpenditurePercentage">99 %</string>
    <string name="singleExpenditureDate">This Date</string>
    <string name="delete_this_expenditure">Delete this expenditure</string>
    <string name="edit_this_expenditure">Edit this expenditure</string>

    <!-- Visualization Fragment Entry -->
    <string name="description_title">Welcome to Visualizations</string>
    <string name="description1">
        Financier visualizes your expenditures for you so that you have a
        clear perspective of what is going on in your pocket.
        \n\nWe have divided your expenditures into categories to better classify them.
    </string>
    <string name="categories_description">Here are the <u>categories</u></string>
    <string name="visualize_button">Visualize</string>
    <string name="small_warning1">Visualizations might take a few minutes to load</string>

    <!-- Visualization Activity -->
    <string name="yearly">Yearly</string>
    <string name="monthly_percentage_pie_chart">Expenditure Distribution</string>
    <string name="monthly_percentage_column_chart">ColumnWise Display</string>
    <string name="monthly">Monthly</string>
    <string name="spline_chart_overall">Monthly overalls</string>
    <string name="scatter_chart">Monthly Overalls (CategoryWise)</string>
    <string name="category_overall_circular">Category-wise coverage</string>
    <string name="weekly">Weekly</string>
    <string name="polar_chart">Day-wise Expenditure</string>
    <string name="exit">I \'m done sightseeing</string>
    <string name="exit_to_dashboard">Exit to Dashboard</string>

    <!-- Pie chart fragment -->
    <string name="pie_chart_description">How much you spent per Category</string>

    <!-- Column chart fragment -->
    <string name="adjust_graph">Adjust Graph to your Income</string>

</resources>
