<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/menu_expenditure"
            android:icon="@drawable/ic_add_new_expenditure"
            android:title="@string/menu_expenditure" />
        <item
            android:id="@+id/menu_visualize"
            android:icon="@drawable/ic_visualize"
            android:title="@string/visualize" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/cloud_upload"
                android:icon="@drawable/ic_cloud_upload"
                android:title="@string/cloud_save" />
            <item
                android:id="@+id/cloud_download"
                android:icon="@drawable/ic_cloud_download"
                android:title="@string/cloud_download" />
        </menu>
    </item>

</menu>